--- a/dapp/package.json
+++ b/dapp/package.json
@@ -12,7 +12,8 @@
     "ethers": "^6.9.1",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
