--- a/dapp/package.json
+++ b/dapp/package.json
@@ -11,15 +11,21 @@
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@prisma/client": "^5.2.0",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.0",
+    "date-fns": "^3.2.0",
     "ethers": "^6.10.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "tailwind-merge": "^2.2.0",
