--- a/dapp/package.json
+++ b/dapp/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.4",
@@ -21,6 +22,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.2.0",
+    "embla-carousel-react": "^8.0.0-rc19",
     "ethers": "^6.10.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
