--- a/dapp/package.json
+++ b/dapp/package.json
@@ -26,10 +26,12 @@
     "ethers": "^6.10.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0"
