--- a/dapp/package.json
+++ b/dapp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
+    "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.2.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -34,11 +35,13 @@
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "^2.21.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
