--- a/dapp/package.json
+++ b/dapp/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^3.2.0",
     "embla-carousel-react": "^8.0.0-rc19",
     "ethers": "^6.10.0",
+    "fs": "^0.0.1-security",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
