--- a/dapp/package.json
+++ b/dapp/package.json
@@ -25,13 +25,15 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@thirdweb-dev/react": "^4.9.4",
+    "@thirdweb-dev/sdk": "^4.0.99",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.2.0",
     "embla-carousel-react": "^8.0.0-rc19",
-    "ethers": "^6.10.0",
+    "ethers": "^5.7.2",
     "fs": "^0.0.1-security",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
