--- a/dapp/package.json
+++ b/dapp/package.json
@@ -46,6 +46,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0",
     "uuid": "^9.0.1",
+    "web3": "^4.10.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
