fixing bugs for build

--- a/dapp/package.json
+++ b/dapp/package.json
@@ -37,6 +37,7 @@
     "embla-carousel-react": "^8.0.0-rc19",
     "ethers": "^5.7.2",
     "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
@@ -58,6 +59,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.5.0",
